initial work for testing simple http client